k8s/DeploymentConfig_apps.openshift.io_v1_rhn-engineering-dsch-dev_qotd.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    description: Defines how to deploy the application server
    template.alpha.openshift.io/wait-for-ready: "true"
  labels:
    app: httpd-example
    app.kubernetes.io/part-of: qotd
    template: httpd-example
    template.openshift.io/template-instance-owner: 5dd2722e-924b-4887-aaa7-855f18475e9e
  name: qotd
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: qotd
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: qotd
      name: qotd
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/rhn-engineering-dsch-dev/qotd@sha256:7704948b7ef53891647927063534324ab69e33b9ffb75edb6d492fab642b9538
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        name: httpd-example
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - httpd-example
      from:
        kind: ImageStreamTag
        name: qotd:latest
        namespace: rhn-engineering-dsch-dev
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/rhn-engineering-dsch-dev/qotd@sha256:7704948b7ef53891647927063534324ab69e33b9ffb75edb6d492fab642b9538
    type: ImageChange
  - type: ConfigChange
