k8s/Deployment_apps_v1_rhn-engineering-dsch-dev_qotd-nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/donschenck/qotd-nodejs
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"qotd-nodejs:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"qotd-nodejs\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: qotd-nodejs
    app.kubernetes.io/component: qotd-nodejs
    app.kubernetes.io/instance: qotd-nodejs
    app.kubernetes.io/name: qotd-nodejs
    app.kubernetes.io/part-of: qotd
  name: qotd-nodejs
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: qotd-nodejs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qotd-nodejs
        deployment: qotd-nodejs
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/rhn-engineering-dsch-dev/qotd-nodejs@sha256:19ee6eebf4aaa0aec85a3cd0b0a44aa415018f2490c8b9dd49946bee3091b31f
        imagePullPolicy: Always
        name: qotd-nodejs
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
