k8s/Service__v1_rhn-engineering-dsch-dev_qotd-nodejs.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/donschenck/qotd-nodejs
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: qotd-nodejs
    app.kubernetes.io/component: qotd-nodejs
    app.kubernetes.io/instance: qotd-nodejs
    app.kubernetes.io/name: qotd-nodejs
    app.kubernetes.io/part-of: qotd
  name: qotd-nodejs
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 10000-tcp
    port: 10000
    protocol: TCP
    targetPort: 10000
  selector:
    app: qotd-nodejs
    deployment: qotd-nodejs
  sessionAffinity: None
  type: ClusterIP
